crates/aenv-core/tests/snapshots/json_snapshots__status_report_shape_is_stable.snap
---
source: crates/aenv-core/tests/json_snapshots.rs
assertion_line: 123
expression: report
---
{
  "project": "/proj",
  "active_namespace": "solo",
  "resolution_chain": [
    "solo"
  ],
  "resolved_hash": "sha256-v1:0000000000000000000000000000000000000000000000000000000000000000",
  "parameters": {
    "default_model": {
      "value": "claude-opus-4.7",
      "source_namespace": "leaf",
      "inheritance_chain": [
        {
          "namespace": "base",
          "value": "claude-sonnet-4.6"
        },
        {
          "namespace": "leaf",
          "value": "claude-opus-4.7"
        }
      ]
    }
  },
  "managed_files": [
    {
      "path": "CLAUDE.md",
      "qualified_name": "solo::CLAUDE.md",
      "short_name": "CLAUDE.md",
      "provided_by_namespace": "solo",
      "strategy": "symlink"
    }
  ],
  "backed_up": []
}
