crates/aenv-core/tests/snapshots/json_snapshots__structural_diff_shape_is_stable.snap
---
source: crates/aenv-core/tests/json_snapshots.rs
expression: d
---
{
  "a": "alpha",
  "b": "beta",
  "skills": {
    "added": [
      "beta::write-tests"
    ],
    "removed": [
      "alpha::quick-prototype"
    ],
    "common": []
  },
  "agents": {
    "added": [],
    "removed": [],
    "common": []
  },
  "parameters": {
    "added": [],
    "removed": [],
    "changed": [
      {
        "name": "default_model",
        "a": "claude-sonnet-4.6",
        "b": "claude-opus-4.7"
      }
    ]
  },
  "policies": {
    "added": [],
    "removed": [],
    "changed": []
  },
  "instructions_sections": {
    "added": [],
    "removed": [],
    "common": [
      "Project Facts"
    ]
  },
  "instructions_section_diffs": [
    {
      "heading": "Project Facts",
      "status": "differs",
      "summary": "alpha: 142 chars; beta: 198 chars"
    }
  ]
}
