crates/aenv-core/tests/snapshots/json_snapshots__which_report_shape_is_stable.snap
---
source: crates/aenv-core/tests/json_snapshots.rs
assertion_line: 100
expression: r
---
{
  "path": ".claude/skills/write-tests/SKILL.md",
  "qualified_name": "leaf::write-tests",
  "short_name": "write-tests",
  "provided_by_namespace": "leaf",
  "strategy": "symlink",
  "shadows": [
    "base::write-tests"
  ]
}
