crates/aenv-core/tests/snapshots/json_snapshots__which_report_via_builder.snap
---
source: crates/aenv-core/tests/json_snapshots.rs
assertion_line: 356
expression: report
---
{
  "path": "[PATH]",
  "qualified_name": "(merged)::CLAUDE.md",
  "short_name": "CLAUDE.md",
  "provided_by_namespace": null,
  "strategy": "section-merge",
  "contributors": [
    "base::CLAUDE.md",
    "leaf::CLAUDE.md"
  ]
}
